# F1Clash_Setup

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  drivers.json  parts.json
.claude/: settings.local.json
benches/: optimizer.rs
migrations/: 001_initial.sql  002_drivers.sql  003_seasons.sql  004_part_catalog.sql  005_additional_stat_and_battery.sql  006_cards_owned.sql  007_driver_cards_owned.sql  008_driver_catalog.sql  009_sessions.sql  010_page_events.sql  011_page_events_session.sql  012_shared_setups.sql  013_nullable_setup_parts.sql  014_page_events_canonical.sql  015_feature_events.sql  016_shared_setups_content_hash.sql  017_shared_setups_view_count.sql  018_share_views.sql  019_shared_setups_og_image.sql
src/: auth.rs  catalog.rs  data.rs  drivers_data.rs  error.rs  lib.rs  main.rs  og_image.rs  optimizer_core.rs  session.rs  upgrade_advisor.rs
src/analytics/: admin.rs  dashboard.html  domain.rs  geoip.rs  middleware.rs  mod.rs  postgres.rs
src/models/: driver.rs  mod.rs  part.rs  setup.rs
src/routes/: admin.rs  advisor.rs  auth_routes.rs  boosts.rs  driver_boosts.rs  drivers.rs  export_import.rs  inventory.rs  mod.rs  optimizer.rs  parts.rs  season.rs  setups.rs  share.rs
src/templates/: admin.rs  advisor.rs  boosts.rs  driver_boosts.rs  drivers.rs  error.rs  guide.rs  inventory.rs  layout.rs  mod.rs  optimizer.rs  parts.rs  setups.rs  share.rs
