[package]
name = "f1clash_setup"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = "0.8"
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"

[lib]
name = "f1clash_setup"
path = "src/lib.rs"

[[bin]]
name = "f1clash_setup"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "optimizer"
harness = false
