[package]
name = "f1clash_setup"
version = "0.5.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex  = "0.4"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
resvg = "0.43"
maxminddb = { version = "0.24", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
moka = { version = "0.12", features = ["future"], optional = true }

[features]
default = []
maxmind = ["dep:maxminddb"]
http-geoip = ["dep:reqwest", "dep:moka"]

[lib]
name = "f1clash_setup"
path = "src/lib.rs"

[[bin]]
name = "f1clash_setup"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "optimizer"
harness = false
